--- a/CV/khmer.tex
+++ b/CV/khmer.tex
@@ -13,7 +13,7 @@
 
 \newfontfamily{\khmerfamily}
 [
-	BoldFont = Kdam Thmor,
+	BoldFont = Khmer OS Bokor,
 	ItalicFont = Khmer OS Metal Chrieng,
 	BoldItalicFont = Khmer OS Muol,
 	SmallCapsFont = TeX Gyre Pagella,
@@ -23,14 +23,14 @@
 %Simonetta, Zeyada, Caveat, 
 \newfontfamily{\monofamily}[Scale=1.25]{Latin Modern Mono}
 \newfontfamily{\latinfamily}[Scale=1.3]{Latin Modern Roman}
-\newfontfamily{\tacteingfamily}[Scale=3]{Tacteing}
+% \newfontfamily{\tacteingfamily}[Scale=3]{Tacteing}
 
 % Define new font family (have to)   <-- BUG
 \newrobustcmd{\englishfont}{\englishfamily\let\currentenglish\englishfamily }
 \newrobustcmd{\khmerfont}{\khmerfamily\let\currentkhmer\khmerfamily}
 \newrobustcmd{\mono}{\monofamily\let\currentenglish\monofamily }
 \newrobustcmd{\en}{\latinfamily\let\currentenglish\latinfamily}
-\newrobustcmd{\tacteing}{\tacteingfamily\let\currentenglish\tacteingfamily}
+% \newrobustcmd{\tacteing}{\tacteingfamily\let\currentenglish\tacteingfamily}
 
 
 
