--- a/new.tex
+++ b/new.tex
@@ -1,12 +1,28 @@
-
 \documentclass{article}
 
-\input{preamble.tex}
+\input{preamble-new.tex}
 
 \begin{document}
 
 
 Hello there, I am new to Emacs
+\begin{theorem}[Cauchy integral]
+  This is a very useful thereom in mathematics and also in physics
+  the cauchy integral is calculated as follows
+\end{theorem}
+
+
+\begin{definition}[useful]
+  This is a very useful thereom in mathematics and also in physics
+  the cauchy integral is calculated as follows
+  lkjadf
+\end{definition}
+\begin{definition}
+  lkjadf
+\end{definition}
+
+lkjadf lkjadf lkjadf;j adflkj 
+
 
 	
 \end{document}
